--- a/example/index.html
+++ b/example/index.html
@@ -1,23 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Sin X</title>
+  <head>
+    <title>Sin X</title>
 
-  <style type="text/css">
-    canvas {
-      width: 100%;
-      height: 200px
-    }
-  </style>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.2.0/require.min.js"></script>
-  <script src="math.js"></script>
-
-</head>
-<body>
-  <canvas id='sinx1'></canvas>
-  <canvas id='sinx3'></canvas>
-  <canvas id='sinx4'></canvas>
-
-</body>
+    <script src="../node_modules/requirejs/require.js"></script>
+    <script src="math.js"></script>
+  </head>
+  <body>
+  </body>
 </html>
